add index page, endpoints, assets and styles

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %} {% endblock %} - API </title>
-    <link rel= "stylesheet" type= "text/css" href= "../static/styles/base.css">
-</head>
-<body>
-    <div class="container">
-        <div class="header">
-            <h1>API</h1>
-        </div>
-        <div class="content">
-            {% block content %} {% endblock %}
-        </div>
-        <div class="footer">
-            <p>API</p>
-        </div>
-    </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>{% block title %} {% endblock %}</title>
+    <link rel="stylesheet" type="text/css" href="../static/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <section class="container">
+      <div class="content">{% block content %} {% endblock %}</div>
+      <footer class="footer">
+        <p>Visit the <a href="https://github.com/Afrokk/ZipState.rest">GitHub Page</a> for more info.</p>
+        <p>
+          Copyright © 2023 - Developed with &#128153; by
+          <a href="http://afrokk.dev/">Afrasiyab Khan</a>
+        </p>
+      </footer>
+    </section>
+  </body>
 </html>
