--- a/templates/base.html
+++ b/templates/base.html
@@ -6,18 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %} {% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="../static/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section class="container">
       <div class="content">{% block content %} {% endblock %}</div>
       <footer class="footer">
-        <p>Visit the <a href="https://github.com/Afrokk/ZipState.rest">GitHub Page</a> for more info.</p>
         <p>
+          Visit the
+          <a href="https://github.com/Afrokk/ZipState.rest" target="_blank"
+            >GitHub Page</a
+          >
+          for more info.
+        </p>
+        <p class="copyright-msg">
           Copyright © 2023 - Developed with &#128153; by
-          <a href="http://afrokk.dev/">Afrasiyab Khan</a>
+          <a href="http://afrokk.dev/" target="_blank">Afrokk</a>
         </p>
       </footer>
     </section>
