--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,11 @@ block content %}
   <li>City</li>
   <li>County</li>
   <li>Timezone</li>
-  <li>ITS SOI Code</li>
+  <li>IRS SOI Code</li>
   <li>Area Code</li>
   <li>Country</li>
   <li>Latitude/Longitude</li>
-  <li>ITS Estimated Population</li>
+  <li>IRS Estimated Population</li>
 </ul>
 <p>Returns a <span>JSON object</span>.</p>
 <h3>API Endpoints:</h3>
